# jobdex

./: .gitignore  LICENSE  PLAN.md  QA.md  README.md  docker-compose.yaml
.github/workflows/: ci.yaml  deploy.yaml
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 60ea3f66d449_initial_schema.py
backend/app/: config.py  database.py  main.py  models.py  scheduler.py  schemas.py  startup.py
backend/app/enrichment/: __init__.py  runner.py  wikidata.py  wikipedia.py
backend/app/ingestion/: __init__.py  ashby.py  base.py  greenhouse.py  lever.py  mcf.py  normalizer.py  pyjamahr.py  workable.py  ycombinator.py
backend/app/ingestion/europe/: recruitee.py
backend/app/ingestion/normalizer/: __init__.py  _loader.py  classifiers.py  location.py  text.py
backend/app/ingestion/usa/: ashby.py  greenhouse.py  lever.py  smartrecruiters.py
backend/app/routers/: _builders.py  admin.py  cities.py  companies.py  jobs.py  map.py  payments.py  search.py  stats.py
backend/data/: cities.json  role_patterns.json  seniority_patterns.json  tech_keywords.json
backend/scripts/: discover.py  drop.py  enrich.py  ingest.py  nuke.py  probe.py  reset.py  seed.py  test_api.py  test_e2e.py  test_enrichment.py  validate.py
backend/tests/: README.md
backend/tests/integration/: conftest.py  test_cities.py  test_companies.py  test_health.py  test_jobs.py  test_map.py  test_search.py  test_stats.py
backend/tests/unit/: test_classifiers.py  test_location.py  test_pagination.py  test_payments.py  test_text.py
docs/: ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md
frontend/: .dockerignore  .env.example  .prettierrc  Dockerfile  README.md  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  wrangler.jsonc
frontend/public/: LLMs.txt  llms.txt  robots.txt  sitemap.xml
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/api/: client.ts  companies.ts  jobs.ts  map.ts  payments.ts  stats.ts
frontend/src/components/globe/: GlobeCanvas.tsx  GlobeOverlayControls.tsx
frontend/src/components/jobs/: JobCard.tsx  JobDetailDrawer.tsx  JobPanel.tsx
frontend/src/components/layout/: StatusBar.tsx
frontend/src/components/search/: SearchFilterBar.tsx
frontend/src/components/ui/: cursor.tsx  dialog.tsx  globe.tsx  highlighter.tsx  social-icons.tsx
frontend/src/features/landing/: DonateModal.tsx  HeroSection.tsx  LandingPage.tsx
frontend/src/features/landing/components/: DonateModal.tsx  HeroSection.tsx
frontend/src/features/map/: MapPage.tsx  MapView.tsx  constants.ts  mapUtils.ts  types.ts  useStatusBar.ts  utils.ts
frontend/src/hooks/: useGlobeData.ts  useJobDetail.ts  useJobs.ts
frontend/src/lib/: api.ts  constants.ts  motion.ts  store.ts  utils.ts
frontend/src/pages/: LandingPage.tsx  MapPage.tsx
frontend/src/types/: api.ts  index.ts
(+16 files in other folders)
