[project]
name = "jobdex"
version = "1.0.0"
description = "A global index of startup hiring by city"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.138.0",
    "httpx2>=2.4.0",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.12",
    "tenacity>=9.1.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "rapidfuzz>=3.14.5",
    "razorpay>=2.0.1",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires a live database (deselect with -m 'not integration')"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
